# tracdap

./: .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  build.gradle  gradle.properties  settings.gradle
.github/: CODE_OF_CONDUCT.md
trac-runtime/python/: .dockerignore  Dockerfile  README.md  package-ctrl.py  requirements.txt  setup.cfg  setup.py
trac-runtime/python/codegen/: generator.py  protoc-ctrl.py  protoc-gen-trac.py
trac-runtime/python/examples/: sys_config.yaml
trac-runtime/python/examples/hello_pandas/: hello_pandas.py  hello_pandas.yaml
trac-runtime/python/examples/hello_pyspark/: hello_pyspark.py  hello_pyspark.yaml
trac-runtime/python/src/trac/api/: define_func.py  modelling.py
trac-runtime/python/src/trac/rt/: _version.py  exceptions.py
trac-runtime/python/src/trac/rt/api/: __init__.py  core_api.py  define_func.py  modelling.py  test.py
trac-runtime/python/src/trac/rt/config/: __init__.py  config.py
trac-runtime/python/src/trac/rt/exec/: actor.py  actors.py  context.py  dev_mode.py  engine.py  engine_v2.py  function.py  functions.py  graph.py  graph_builder.py  runtime.py
trac-runtime/python/src/trac/rt/impl/: config_parser.py  data.py  model_loader.py  model_repos.py  model_shim.py  models.py  repos.py  repositories.py  storage.py  type_system.py  util.py
trac-runtime/python/src/trac/rt/launch/: __init__.py  __main__.py  cli.py  launch.py
trac-runtime/python/src/trac/rt/metadata/: __init__.py
trac-runtime/python/test/trac_examples/: __init__.py  test_hello_pandas.py  test_hello_world.py  test_using_data.py
trac-runtime/python/test/trac_test/e2e/: sys_config.yaml  test_import_model.py  test_import_model.yaml
trac-runtime/python/test/trac_test/rt/api/: test_model_api.py
trac-runtime/python/test/trac_test/rt/exec/: test_actor.py  test_actors.py  test_context.py
trac-runtime/python/test/trac_test/rt/impl/: test_config_parser.py  test_model_loader.py  test_models.py
trac-runtime/python/test/trac_test/rt/jobs/: test_import_model.py
tracdap-runtime/python/: README.md  build_runtime.py  package-ctrl.py  requirements.txt  requirements_extensions.txt  requirements_plugins.txt  setup.cfg
tracdap-runtime/python-ext/: build_plugins.py  pyproject.toml
tracdap-runtime/python-ext/plugins/git/: README.md  _settings.py  requirements.txt
tracdap-runtime/python-ext/plugins/http/: README.md  _settings.py  project_settings.sh  requirements.txt
tracdap-runtime/python-ext/plugins/openai/: README.md  _settings.py  requirements.txt
tracdap-runtime/python-ext/plugins/pypi/: README.md  _settings.py  requirements.txt
tracdap-runtime/python-ext/src/tracdap/ext/git/: git_plugin.py
tracdap-runtime/python-ext/src/tracdap/ext/http/: __init__.py  http_plugin.py
tracdap-runtime/python-ext/src/tracdap/ext/openai/: openai_plugin.py
tracdap-runtime/python-ext/src/tracdap/ext/pypi/: pypi_plugin.py
tracdap-runtime/python-ext/test/tracdap_ext_test/git/: __init__.py  int_git.py
tracdap-runtime/python-ext/test/tracdap_ext_test/http/: int_http.py
tracdap-runtime/python-ext/test/tracdap_ext_test/pypi/: int_pypi.py
tracdap-runtime/python/src/trac/rt/api/: core_api.py
tracdap-runtime/python/src/trac/rt/exec/: runtime.py
tracdap-runtime/python/src/trac/rt/impl/: config_parser.py  data.py  models.py
tracdap-runtime/python/src/trac/rt/launch/: __init__.py
tracdap-runtime/python/src/tracdap/rt/: __init__.py  _version.py  exceptions.py
tracdap-runtime/python/src/tracdap/rt/_exec/: actors.py  context.py  dev_mode.py  engine.py  functions.py  graph.py  graph_builder.py  runtime.py  server.py
tracdap-runtime/python/src/tracdap/rt/_impl/: api_hook.py  config_parser.py  csv_codec.py  data.py  guard_rails.py  logging.py  models.py  repos.py  runtime.py  schemas.py  shim.py  static_api.py  storage.py  type_system.py  util.py  validation.py
tracdap-runtime/python/src/tracdap/rt/_plugins/: __init__.py  _helpers.py  aws_storage.py  config_local.py  format_arrow.py  format_csv.py  format_parquet.py  repo_git.py  repo_local.py  repo_pypi.py  storage_arrow.py  storage_aws.py  storage_azure.py  storage_gcp.py  storage_local.py  storage_sql.py  storage_sql_dialects.py
tracdap-runtime/python/src/tracdap/rt/api/: __init__.py  constants.py  core_api.py  data_api.py  define_func.py  experimental.py  file_types.py  hook.py  model_api.py  static_api.py
tracdap-runtime/python/src/tracdap/rt/config/: __init__.py
tracdap-runtime/python/src/tracdap/rt/exec/: actors.py  context.py  dev_mode.py  engine.py  functions.py  graph.py  graph_builder.py  runtime.py
tracdap-runtime/python/src/tracdap/rt/ext/: _guard.py  config.py  embed.py  external.py  network.py  plugins.py  repos.py  sql.py  storage.py  util.py
tracdap-runtime/python/src/tracdap/rt/impl/: api_hook.py  config_parser.py  data.py  models.py  repos.py  schemas.py  shim.py  storage.py  type_system.py  util.py
tracdap-runtime/python/src/tracdap/rt/launch/: __init__.py  __main__.py  cli.py  launch.py
tracdap-runtime/python/src/tracdap/rt/metadata/: __init__.py
tracdap-runtime/python/test/trac_test/rt/exec/: test_actors.py  test_context.py
tracdap-runtime/python/test/trac_test/rt/impl/: test_models.py
tracdap-runtime/python/test/tracdap_examples/: test_chaining.py  test_hello_world.py  test_tutorial.py  test_using_data.py
tracdap-runtime/python/test/tracdap_test/resources/: schema_invalid_1.csv  schema_invalid_2.csv  schema_invalid_3.csv  schema_sample.csv  schema_sample_2.csv  test_models.py
tracdap-runtime/python/test/tracdap_test/rt/: test_embedded_job.py
tracdap-runtime/python/test/tracdap_test/rt/api/: __init__.py  test_model_api.py
tracdap-runtime/python/test/tracdap_test/rt/core/: test_data.py  test_models.py  test_repos.py  test_schemas.py  test_storage_local.py  test_struct.py
tracdap-runtime/python/test/tracdap_test/rt/exec/: test_actors.py  test_context.py  test_data_context.py  test_server.py
tracdap-runtime/python/test/tracdap_test/rt/ext/: __init__.py  test_ext_config.py  test_ext_external.py
(+2937 files in other folders)
