[metadata]

name = trac-runtime
version = 0.2.0b3                         # TODO: Get real version number

description = TRAC Model Runtime for Python
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/accenture/trac
license = https://www.apache.org/licenses/LICENSE-2.0
platform = any

project_urls =
    Bug Tracker = https://github.com/accenture/trac/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

author = Martin Traverse
author_email = martin.traverse@accenture.com


[options]

python_requires = >=3.7

packages =
    trac
    trac.rt
    trac.rt.api
    trac.rt.config
    trac.rt.exec
    trac.rt.impl
    trac.rt.launch
    trac.rt.metadata
    trac.rt_gen                           # RELEASE_PKG_EXCLUDE
    trac.rt_gen.domain                    # RELEASE_PKG_EXCLUDE
    trac.rt_gen.domain.trac               # RELEASE_PKG_EXCLUDE
    trac.rt_gen.domain.trac.metadata      # RELEASE_PKG_EXCLUDE

package_dir =
    trac = src/trac
    trac.rt = src/trac/rt
    trac.rt_gen = generated/trac/rt_gen   # RELEASE_PKG_EXCLUDE
