[metadata]

# Do not change the version here!
# For package builds, the package-ctrl script will fill in the version
# Otherwise the version should always be set to DEVELOPMENT

name = trac-runtime
version = DEVELOPMENT

description = TRAC Model Runtime for Python
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/accenture/trac
license = https://www.apache.org/licenses/LICENSE-2.0
platform = any

project_urls =
    Bug Tracker = https://github.com/accenture/trac/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

author = Martin Traverse
author_email = martin.traverse@accenture.com


[options]

packages =
    trac.rt
    trac.rt.api
    trac.rt.config
    trac.rt.exec
    trac.rt.impl
    trac.rt.launch
    trac.rt.metadata
    trac.rt_gen
    trac.rt_gen.domain
    trac.rt_gen.domain.trac
    trac.rt_gen.domain.trac.metadata

package_dir =
    trac = src/trac
    trac.rt = src/trac/rt
    trac.rt_gen = generated/trac/rt_gen

python_requires = >=3.7

install_requires =
    pandas >= 1.0.0, < 2.0.0
    pyspark >= 2.4.0, < 3.2.0
    pyyaml >= 5.3.0, < 6.0.0
