

[build-system]

requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]

dynamic = ["version", "dependencies"]

name = "${PROJECT_NAME}"
description = "${PROJECT_DESCRIPTION}"
readme = "README.md"

license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    {name = "Martin Traverse", email = "martin@fintrac.co.uk"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

requires-python = ">= 3.9, < 3.14"


[project.urls]

Homepage = "https://tracdap.finos.org/"
Documentation = "https://tracdap.readthedocs.io/"
Repository = "https://github.com/finos/tracdap"
"Bug Tracker" = "https://github.com/finos/tracdap/issues"


[tool.setuptools.packages.find]

where = ["src"]
namespaces = true


[tool.setuptools.dynamic]

version = { attr = "${PROJECT_ROOT_PACKAGE}.__version__" }
dependencies = { file = ["requirements.txt"] }
