

[build-system]

requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]

dynamic = ["version", "dependencies"]

name = "${PROJECT_NAME}"
description = "${PROJECT_DESCRIPTION}"
readme = "README.md"

license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    {name = "Martin Traverse", email = "martin@fintrac.co.uk"}
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = ">= 3.10"


[project.urls]

Homepage = "https://tracdap.finos.org/"
Documentation = "https://tracdap.readthedocs.io/"
"Source Code" = "https://github.com/finos/tracdap"
"Issue Tracker" = "https://github.com/finos/tracdap/issues"

[tool.setuptools.packages.find]

where = ["src"]
namespaces = true


[tool.setuptools.dynamic]

version = { attr = "${PROJECT_ROOT_PACKAGE}.__version__" }
dependencies = { file = ["requirements.txt"] }
