[metadata]

# Do not change the version here!
# For package builds, the package-ctrl script will fill in the version
# Otherwise the version should always be set to DEVELOPMENT

name = tracdap-runtime
version = DEVELOPMENT

description = Runtime package for building models on the TRAC Data & Analytics Platform
long_description = file: README.md
long_description_content_type = text/markdown

license = Apache-2.0
platform = any

url = https://tracdap.finos.org/

project_urls =
    Documentation = https://tracdap.readthedocs.io/
    Source Code = https://github.com/finos/tracdap
    Bug Tracker = https://github.com/finos/tracdap/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

author = Martin Traverse
author_email = martin.traverse@accenture.com


[options]

packages =
    tracdap.rt
    tracdap.rt.api
    tracdap.rt.metadata
    tracdap.rt.config
    tracdap.rt.launch
    tracdap.rt.ext
    tracdap.rt._exec
    tracdap.rt._impl
    tracdap.rt._plugins
    tracdap.rt_gen
    tracdap.rt_gen.domain
    tracdap.rt_gen.domain.tracdap
    tracdap.rt_gen.domain.tracdap.metadata

package_dir =
    tracdap = src/tracdap
    tracdap.rt = src/tracdap/rt
    tracdap.rt_gen = generated/tracdap/rt_gen

# Support a range of Python versions
# (These versions are tested in CI)
python_requires = >= 3.8, < 3.13

install_requires =
    protobuf == 4.23.2
    pyarrow == 14.0.0
    pyyaml == 6.0.1
    dulwich == 0.21.5
    requests == 2.31.0

    # Support a range of Pandas versions
    # (These versions are tested in CI)
    pandas >= 1.2.0, < 2.2.0

[options.extras_require]

spark =
    # Support a range of PySpark versions
    # (These versions are tested in CI)
    pyspark >= 3.0.0, < 3.5.0

aws =
    botocore == 1.29.156
    boto3 == 1.26.156

gcp =
    google-auth == 2.20.0
    google-cloud-core == 2.3.2
    google-cloud-storage == 2.9.0
    gcsfs == 2023.6.0

azure =
    azure-core == 1.26.4
    azure-identity == 1.13.0
    azure-storage-blob == 12.16.0
    adlfs == 2023.4.0
