[metadata]

# Do not change the version here!
# For package builds, the package-ctrl script will fill in the version
# Otherwise the version should always be set to DEVELOPMENT

name = tracdap-runtime
version = DEVELOPMENT

description = Runtime package for building models on the TRAC Data & Analytics Platform
long_description = file: README.md
long_description_content_type = text/markdown

license = Apache-2.0
platform = any

url = https://tracdap.finos.org/

project_urls =
    Documentation = https://tracdap.readthedocs.io/
    Source Code = https://github.com/finos/tracdap
    Bug Tracker = https://github.com/finos/tracdap/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

author = Martin Traverse
author_email = martin.traverse@accenture.com


[options]

packages =
    tracdap.rt
    tracdap.rt.api
    tracdap.rt.metadata
    tracdap.rt.config
    tracdap.rt.launch
    tracdap.rt.ext
    tracdap.rt._exec
    tracdap.rt._impl
    tracdap.rt._impl.grpc
    tracdap.rt._impl.grpc.tracdap
    tracdap.rt._impl.grpc.tracdap.metadata
    tracdap.rt._impl.grpc.tracdap.config
    tracdap.rt._impl.grpc.tracdap.api
    tracdap.rt._impl.grpc.tracdap.api.internal
    tracdap.rt._plugins
    tracdap.rt_gen
    tracdap.rt_gen.domain
    tracdap.rt_gen.domain.tracdap
    tracdap.rt_gen.domain.tracdap.metadata
    tracdap.rt_gen.grpc
    tracdap.rt_gen.grpc.tracdap
    tracdap.rt_gen.grpc.tracdap.metadata
    tracdap.rt_gen.grpc.tracdap.config
    tracdap.rt_gen.grpc.tracdap.api
    tracdap.rt_gen.grpc.tracdap.api.internal

package_dir =
    tracdap = src/tracdap
    tracdap.rt = src/tracdap/rt
    tracdap.rt_gen = generated/tracdap/rt_gen

# Support a range of Python versions
# (These versions are tested in CI)
python_requires = >= 3.8, < 3.13

install_requires =
    protobuf == 5.27.4
    pyarrow == 16.0.0
    pyyaml == 6.0.1
    dulwich == 0.22.1
    requests == 2.32.3

    # Support a range of Pandas versions (These versions are tested in CI)
    # Do not allow NumPy 2.0 yet, it breaks the ABI, other packages need time to catch up
    pandas >= 1.2.0, < 2.3.0
    numpy < 2.0.0

[options.extras_require]

grpc =
    # Enable the gRPC runtime API server
    grpcio == 1.66.1

spark =
    # Support a range of PySpark versions
    # (These versions are tested in CI)
    pyspark >= 3.0.0, < 3.6.0

aws =
    botocore == 1.34.93
    boto3 == 1.34.93

gcp =
    google-auth == 2.34.0
    google-api-core == 2.19.2
    google-cloud-storage == 2.18.2
    gcsfs == 2024.3.1

azure =
    azure-core == 1.30.1
    azure-identity == 1.16.1
    azure-storage-blob == 12.19.1
    adlfs == 2024.4.1
