[metadata]

# Do not change the version here!
# For package builds, the package-ctrl script will fill in the version
# Otherwise the version should always be set to DEVELOPMENT

name = tracdap-runtime
version = DEVELOPMENT
license = Apache-2.0
platform = any

description = Runtime package for building models on the TRAC Data & Analytics Platform
long_description = file: README.md
long_description_content_type = text/markdown

url = https://tracdap.finos.org/

project_urls =
    Documentation = https://tracdap.readthedocs.io/
    Source Code = https://github.com/finos/tracdap
    Bug Tracker = https://github.com/finos/tracdap/issues

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

author = Martin Traverse
author_email = martin@fintrac.co.uk


[options]

packages =
    tracdap.rt
    tracdap.rt.api
    tracdap.rt.metadata
    tracdap.rt.config
    tracdap.rt.launch
    tracdap.rt.ext
    tracdap.rt._impl
    tracdap.rt._impl.core
    tracdap.rt._impl.exec
    tracdap.rt._impl.ext
    tracdap.rt._impl.grpc
    tracdap.rt._impl.grpc.tracdap
    tracdap.rt._impl.grpc.tracdap.metadata
    tracdap.rt._impl.grpc.tracdap.api.internal
    tracdap.rt._plugins
    tracdap.rt_gen
    tracdap.rt_gen.domain
    tracdap.rt_gen.domain.tracdap
    tracdap.rt_gen.domain.tracdap.metadata
    tracdap.rt_gen.grpc
    tracdap.rt_gen.grpc.tracdap
    tracdap.rt_gen.grpc.tracdap.metadata
    tracdap.rt_gen.grpc.tracdap.api.internal

package_dir =
    tracdap = src/tracdap
    tracdap.rt = src/tracdap/rt
    tracdap.rt_gen = generated/tracdap/rt_gen

# Support a range of Python versions
# (These versions are tested in CI)
python_requires = >= 3.9, < 3.14

install_requires =
    protobuf == 6.31.1
    pyarrow == 21.0.0
    pyyaml == 6.0.2
    dulwich == 0.23.2
    requests == 2.32.4


[options.extras_require]

grpc =
    # Enable the gRPC runtime API server
    grpcio == 1.74.0
    grpcio-status == 1.74.0

pandas =
    # Support a range of Pandas / NumPy versions (These versions are tested in CI)
    pandas >= 1.2.0, < 2.3.0
    numpy >= 1.20, < 2.3.0

polars =
    # Support all 1.x releases of Polars
    polars >= 1.0.0, < 2.0.0

pyspark =
    # Support a range of PySpark versions
    # (These versions are tested in CI)
    pyspark >= 3.0.0, < 3.6.0

sql =
    # Support import / export from SQL storage
    sqlalchemy >= 2.0.0, < 2.1.0

aws =
    botocore == 1.39.15
    boto3 == 1.39.15

gcp =
    google-auth == 2.40.3
    google-api-core == 2.25.1
    google-cloud-storage == 3.2.0
    gcsfs == 2024.3.1

azure =
    azure-core == 1.35.0
    azure-identity == 1.23.1
    azure-storage-blob == 12.26.0
    adlfs == 2024.12.0
